# bottle-vision-defect-detection

./: .gitignore  main.py  pyproject.toml
src/code_dataacq/: Imagecollect-re.py  Imagecollect.py  light_control.py
src/code_dataacq/config/: light_settings.json
src/data_get/: Imagecollect-pyside6.py  Imagecollect-re-safe.py  __init__.py  cli.py
src/data_get/config/: data_structure.json
src/data_get/web/: README.md  main.py  run.py
src/data_get/web/config/: cam_config.json  config.json
src/data_get/web/static/: index.html
